# cmake.github-action-automation

./: CMakeLists.txt  Makefile
.github/workflows/: makefile.yml
cmake/: SparkAppimageConfig.cmake  SparkEnvConfig.cmake  package-deb.descript
